# imt231

./: .gitignore  Laboratorio 1.md  README.md  hello_world
Clase 1/: 00-hello_world
Clase 2/: 00-datatypes  00-datatypes.cpp  01-datatypes2  01-datatypes2.cpp  02-scope  02-scope.cpp  03-inputoutput  03-inputoutput.cpp  output.txt
Clase 20/: semaphore  semaphore.cpp  threads  threads.cpp  threads2  threads2.cpp
Clase 21/: async  async-except  async-except.cpp  async.cpp  mutex  mutex.cpp  promise  promise-except  promise-except.cpp  promise.cpp
Clase 22/: Patrones.md  adapter  adapter.cpp  decorator.cpp  facade  facade.cpp  factory.h  observer  observer.cpp  singleton.h  state  state.cpp
Clase 3/: 04-functions  04-functions.cpp  05-overloading  05-overloading.cpp  06-templates  06-templates.cpp  07-timecomplexity.cpp
Clase 4/: 08-classes  08-classes.cpp  Vehiculo.cpp  Vehiculo.hpp
Clase 7/: 09-destructors  09-destructors.cpp  10-inheritance  10-inheritance.cpp  11-polymorphism.cpp  11-polypmorphism  12-friend  12-friend.cpp
Clase 8/: dip.cpp  isp.cpp  lsp.cpp  ocp.cpp  srp.cpp
Clase 9/: CMakeLists.txt
Laboratorio 2/: Laboratorio 2.md  bootstrap-static.json  main-fstream.cpp  main-httplib  (+1 more)
deteccion_facial/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  compile_commands.json
deteccion_facial/cmake/: FetchLibTorch.cmake  FetchOpenCV.cmake
deteccion_facial/include/: align.hpp  camera.hpp  dataset_csv.hpp  detect.hpp  preprocess.hpp
deteccion_facial/src/: align.cpp  camera.cpp  dataset_csv.cpp  detect.cpp  main.cpp  preprocess.cpp
(+27 files in other folders)
